--- a/app/src/main/res/layout/actionbar_toolbar.xml
+++ b/app/src/main/res/layout/actionbar_toolbar.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/toolbar1"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
