--- a/app/src/main/res/layout/fragment_book_list.xml
+++ b/app/src/main/res/layout/fragment_book_list.xml
@@ -7,6 +7,7 @@
     android:layout_marginLeft="30dp"
     android:layout_marginTop="30dp"
     android:layout_marginBottom="30dp"
+    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
     tools:context=".Fragments.bookListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
