--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/holo_blue_bright"
+    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
     tools:context=".Fragments.categoriesFragment">
 
     <!-- TODO: Update blank fragment layout -->
