--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#e0e8e8"
-    tools:context=".register">
+    tools:context=".registerActivity">
+
+    <include layout="@layout/actionbar_toolbar"></include>
 
     <LinearLayout
         android:layout_width="match_parent"
