--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -3,19 +3,19 @@
 
     <item
         android:id="@+id/nav_booklist"
-        android:icon="@android:drawable/ic_search_category_default"
+        android:icon="@drawable/ic_booklist"
         android:title="@string/tab_bookList"
         />
 
     <item
         android:id="@+id/nav_category"
-        android:icon="@android:drawable/ic_search_category_default"
+        android:icon="@drawable/ic_categories"
         android:title="@string/tab_category"
         />
 
     <item
         android:id="@+id/nav_rentals"
-        android:icon="@android:drawable/ic_search_category_default"
+        android:icon="@drawable/ic_rental"
         android:title="@string/tab_rentalClient"
         />
 
