--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -21,7 +21,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_marginBottom="30dp">
 
             <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/profile_image"
@@ -72,7 +73,7 @@
                 android:layout_below="@id/imageView7"
                 android:layout_alignParentLeft="true"
                 android:layout_marginTop="20dp"
-                app:srcCompat="@drawable/ic_profile"
+                app:srcCompat="@drawable/ic_card"
                 tools:ignore="VectorDrawableCompat" />
 
             <TextView
@@ -90,7 +91,8 @@
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp">
 
             <Button
                 android:id="@+id/contraseña"
