--- a/app/src/main/res/layout/card_view_book.xml
+++ b/app/src/main/res/layout/card_view_book.xml
@@ -17,10 +17,10 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="150dp"
+            android:layout_width="140dp"
             android:layout_height="160dp"
             android:scaleType="fitXY"
-            app:srcCompat="@drawable/ic_launcher_foreground"
+            app:srcCompat="@drawable/img6"
             tools:ignore="VectorDrawableCompat" />
 
         <TextView
