--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -36,6 +36,8 @@
             android:id="@+id/editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLength="14"
+            android:digits="0123456789*,qwertzuiopasdfghjklyxcvbnm"
             android:ems="10"
             android:hint="@string/id" />
 
